<resources>
    <string name="app_name">Codingkeun.com</string>
    <string name="login">Masuk</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="email">Email</string>
    <string name="stylish_text">
        <b>\u00A9</b> AgreeCorps
    </string>
    <string name="title_activity_menu">activity_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="codingkeun_com">CODINGKEUN.com</string>
    <string name="tambah_siswa">Tambah Siswa</string>
    <string name="password">password</string>
    <string name="kembali">kembali</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_toolbar_layout">toolbar_layout</string>
</resources>
