<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/forest"
    tools:context=".MainActivity">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/stylish_text"-->
        <!--android:textSize="15dp"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--/>-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="500dp"-->
            <!--android:background="@drawable/bg_rounded_login_top_page"-->
            <!--/>-->

        <ImageView
            android:id="@+id/ivContent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/login"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Here !"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/ivContent"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/polya"
            android:textStyle="italic|bold"
            />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:orientation="vertical">

        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:id="@+id/etEmail"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--app:errorEnabled="true">-->

            <!--<com.google.android.material.textfield.TextInputEditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:drawableStart="@drawable/ic_mail_outline_black_24dp"-->
                <!--android:drawablePadding="7dp"-->
                <!--android:padding="15dp"-->
                <!--android:hint="@string/email"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:paddingBottom="20dp"-->
                <!--android:textColorHint="@android:color/white"-->
                <!--android:background="@drawable/bg_rounded_login_top_page"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="12dp"-->
                <!--/>-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:drawablePadding="7dp"
            android:padding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_rounded_login_top_page"
            android:paddingBottom="20dp"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="7dp"
            android:padding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_rounded_login_top_page"
            android:paddingBottom="20dp"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            />

        <!--<com.google.android.material.textfield.TextInputLayout-->
            <!--android:id="@+id/etPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:errorEnabled="true">-->

            <!--<com.google.android.material.textfield.TextInputEditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="15dp"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:drawableStart="@drawable/ic_vpn_key_black_24dp"-->
                <!--android:drawablePadding="7dp"-->
                <!--android:padding="15dp"-->
                <!--android:hint="@string/password"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:textColorHint="@android:color/white"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:background="@drawable/bg_rounded_login_top_page"-->
                <!--android:paddingBottom="20dp"-->
                <!--android:textSize="12dp"-->
                <!--/>-->
        <!--</com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:id="@+id/tvLupa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="@string/lupa_kata_sandi"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvLupa"
            android:layout_margin="20dp"
            android:background="@drawable/gradient"
            android:fontFamily="@font/arial"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/ll_1"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/tvMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/atau_masuk_dengan"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tvMasuk"
                >

                <ImageButton
                    android:id="@+id/ibGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_rounded"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google" />

                <ImageButton
                    android:id="@+id/ibFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_rounded"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/ibLinkedin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_rounded"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/linkedin" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>